fix: finalize records for active accounts only (#100)